--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "body-parser": "^1.18.2",
     "concurrently": "^6.2.0",
     "express": "^4.16.3",
+    "font-awesome": "^4.7.0",
     "gravatar": "^1.6.0",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.12",
